支持左侧目录

--- a/templates/includes/header.ejs
+++ b/templates/includes/header.ejs
@@ -19,7 +19,7 @@
                     <ul class="hidden lg:flex items-center justify-start gap-6 md:gap-8 py-3 sm:justify-center">
                         <% nav.forEach(function(item) { %>
                             <li class="shrink-0">
-                                <a href="<%= item.url %>"
+                                <a href="<%= item.link %>"
                                    class="inline-flex items-center rounded-lg justify-center px-4 py-3
                                           hover:bg-gray-100 dark:hover:bg-gray-700
                                           text-sm font-medium leading-none text-gray-900 dark:text-white">
