--- a/templates/includes/header.ejs
+++ b/templates/includes/header.ejs
@@ -36,7 +36,7 @@ function isActive(link) {
                     <div class="flex items-center space-x-4 shrink-0">
                         <% if (site.logo) { %>
                             <a href="/" class="flex items-center">
-                                <img src="<%= basePath %>/<%= site.logo || 'assets/logo.svg' %>"
+                                <img src="<%= basePath %>/<%= site.logo || '/assets/logo.svg' %>"
                                      alt="<%= site.title %>"
                                      class="h-10 w-auto object-contain transition-transform hover:scale-105">
                             </a>
